@@ -19,25 +19,20 @@
  */
 package blue.application;
 
-import java.awt.Desktop;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.io.File;
-import java.net.URI;
 import java.net.URL;
 import org.openide.awt.HtmlBrowser.URLDisplayer;
 import org.openide.util.Exceptions;
 
 public final class BlueManualAction implements ActionListener {
 
+    @Override
     public void actionPerformed(ActionEvent e) {
         String url = getPath();
         try {
-            if (Desktop.isDesktopSupported()) {
-                Desktop.getDesktop().browse(new URI(url));
-            } else {
-                URLDisplayer.getDefault().showURL(new URL(url));
-            }
+            URLDisplayer.getDefault().showURL(new URL(url));
         } catch (Exception ex) {
             Exceptions.printStackTrace(ex);
         }
@@ -54,7 +49,7 @@ public final class BlueManualAction implements ActionListener {
 
             if (index > 0) {
                 path = path.substring(0, index + 4);
-                String retVal =  "file://" + path + "/manual/html/index.html";
+                String retVal = "file://" + path + "/manual/html/index.html";
                 retVal = retVal.replaceAll(" ", "%20");
                 return retVal;
             }
@@ -63,7 +58,7 @@ public final class BlueManualAction implements ActionListener {
             if (f.isDirectory()) {
                 path = path.substring(0, path.lastIndexOf(File.separator));
                 path = path.replaceAll("\\\\", "/");
-                String retVal =  "file://" + path + "/manual/html/index.html";
+                String retVal = "file://" + path + "/manual/html/index.html";
                 retVal = retVal.replaceAll(" ", "%20");
                 return retVal;
             }
